<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shareFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".view.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:src="@color/colorPrimary" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:text="@string/profile_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:drawableStart="@drawable/ic_profile_large"
            android:text="@string/profile"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:drawableStart="@drawable/ic_settings"
            android:text="@string/settings"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:drawableStart="@drawable/ic_help"
            android:text="@string/help_and_support"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>